@@ -1,3 +1,7 @@
+2010-07-15  David Reveman  <davidr@novell.com>
+
+	* effect-test.cpp: Track changes to effects framework.
+
 2010-07-13  Andreia Gaita  <avidigal@novell.com>
 
 	* effect-test.cpp, parsertest/parsertest.cpp,
